# ltsmin

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  Makefile.am  README.md  configure.ac
ProBWrapper/: .gitignore  CMakeLists.txt  CTestConfig.cmake
ProBWrapper/machines/SchneiderBook/: README.md
ProBWrapper/src/: CMakeLists.txt  bprovider.cpp  bprovider.h  javavmloader.cpp  javavmloader.h  ltsmin.h  main.cpp  probwrapperconfig.h  probwrapperconfig.h.in
ProBWrapper/test/: CMakeLists.txt  test.cpp
m4/: acx_prob.m4  ax_jni_include_dir.m4  check_jdk.m4
src/hre/: hre_feedback.c
src/pins-lib/: Makefile.am  b-pins.cpp  b-pins.h  pins-impl.h  prob-pins.c  prob-pins.cpp  prob-pins.h
src/pins-open/: Makefile.am
src/pins2lts-mc/: Makefile.am
src/pins2lts-seq/: Makefile.am
src/pins2lts-sym/: Makefile.am
src/pinssim/: Makefile.am  pinssim  pinssim-etf
src/torx/: pins2torx
